<resources>
    <string name="app_name">Bio</string>
    <string name="name">Lalitha Ravi</string>
    <string name="my_bio"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Ipsum a arcu cursus vitae congue mauris rhoncus aenean vel. Sed libero enim sed faucibus turpis in eu mi. Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus non. Tristique senectus et netus et. Odio tempor orci dapibus ultrices in iaculis nunc sedaugue. Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus non.Odio pellentesque diam volutpat commodo. <b> <i> Erat nam at lectus urna duisconvallis convallis tellus.</i> </b>  Amet nisl suscipit adipiscing bibendum.Vitae et leo duis ut.Et malesuada fames ac turpis egestas. Adipiscing enim eu turpisegestas pretium aenean pharetra magna. Suspendisse sed nisi lacus sed viverra tellus.Sit amet cursus sit amet dictum sit amet justo.
    \n Ut tristique et egestas quis. Vulputate mi sit amet mauris. Scelerisque in dictum non consectetur. Ultrices tincidunt arcu non sodales neque sodales ut. Massa tincidunt nunc pulvinar sapien et ligula ullamcorper malesuada proin. Suspendisse ultrices gravida dictum fusce ut. Aliquam sem fringilla ut morbi tincidunt augue. Id interdum velit laoreet id. Lorem donec massa sapien faucibus et molestie ac feugiat sed. Dictum non consectetur a erat nam at.
    \n Mattis aliquam faucibus purus in massa tempor nec feugiat. Dui sapien eget mi proin sed. Morbi tincidunt augue interdum velit euismod in pellentesque. Viverra ipsum nunc aliquet bibendum enim facilisis gravida neque. Mauris in aliquam sem fringilla. Risus ultricies tristique nulla aliquet enim tortor at. Diam maecenas sed enim ut sem viverra. Arcu ac tortor dignissim convallis aenean. Mollis nunc sed id semper risus in hendrerit gravida rutrum. Maecenas sed enim ut sem viverra aliquet eget sit amet. Elit sed vulputate mi sit amet mauris. Sed viverra ipsum nunc aliquet bibendum enim facilisis. Sed risus ultricies tristique nulla aliquet enim tortor at auctor. Faucibus interdum posuere lorem ipsum dolor. Scelerisque fermentum dui faucibus in ornare quam viverra. Luctus venenatis lectus magna fringilla urna porttitor rhoncus. Lorem ipsum dolor sit amet consectetur adipiscing elit duis tristique. Suspendisse ultrices gravida dictum fusce ut placerat orci nulla pellentesque.</string>
    <string name="hobby_hint_text">Enter your hobbies</string>
    <string name="done_text">Done</string>
    <string name="image_description">Android Robot Image</string>
    <string name="auto_fill_hints">classical guitar</string>
</resources>