<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<!-- create an object bio of type Bio-->
    <data>
        <variable
            name="bio"
            type="com.learningjavaandroid.bio.data.Bio" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FF5252"
        android:orientation="vertical"
        tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/image_description"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <TextView
        android:id="@+id/textView2"
        style="@style/nameStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/layout_margin"
        android:lineSpacingMultiplier="1.9"
        android:padding="@dimen/text_padding"
        android:text="@{bio.name}"
        android:textColor="#FAFAFA" />

    <EditText
        android:id="@+id/enter_hobbies"
        style="@style/nameStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_margin"
        android:ems="10"
        android:hint="@string/hobby_hint_text"
        android:inputType="textPersonName"
        android:textColorHint="#4E342E"
        tools:ignore="TouchTargetSizeCheck"
        android:autofillHints="@string/auto_fill_hints" />

    <Button
        android:id="@+id/done_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/done_text"
        android:onClick="addHobbies"/>

    <TextView
        android:id="@+id/hobbies_text"
        style="@style/generalStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:text="@{bio.hobbies}"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView4"
            style="@style/generalStyle"
            android:text="@string/my_bio" />
    </ScrollView>

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>
